# orc2timeline

./: .editorconfig  .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml
docs/: 0_Intro.md  1_Tutorial.md  2_Installation_and_requirements.md  3_Architecture.md  4_Configuration.md  5_Existing_plugins.md  6_Develop_your_own_plugin.md  7_Licenses.md  8_FAQ.md
src/orc2timeline/: __init__.py  __main__.py  cli.py  config.py  core.py  info.py
src/orc2timeline/conf/: Orc2Timeline.yaml
src/orc2timeline/plugins/: AmCacheToTimeline.py  BrowsersHistoryToTimeline-timestampmap.json  BrowsersHistoryToTimeline.py  EventLogsToTimeline-eventmap.txt  EventLogsToTimeline.py  FirefoxHistoryToTimeline.py  GenericToTimeline.py  I30InfoToTimeline.py  NTFSInfoToTimeline.py  RecycleBinToTimeline.py  RegistryToTimeline-important-keys.txt  RegistryToTimeline.py  USNInfoToTimeline.py  UserAssistToTimeline.py  __init__.py
tests/: conftest.py  test_cli.py  test_config.py  test_core.py
tests/data/conf_7_archives/: ORC_Server_FAKEMACHINE_Browsers.7z  ORC_Server_FAKEMACHINE_Detail.7z  ORC_Server_FAKEMACHINE_General.7z  ORC_Server_FAKEMACHINE_Little.7z  ORC_Server_FAKEMACHINE_SAM.7z
tests/data/null_csv/: ORC_Server_FAKEMACHINE_Detail.7z  ORC_Server_FAKEMACHINE_Little.7z  ORC_Server_FAKEMACHINE_Memory.7z
